force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Champion_Level__c.field-meta.xml
<CustomField>
    <fullName>Champion_Level__c</fullName>
    <label>Champion_Level</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Champion_Level</labelOverride>
        <masterLabel>Champion_Level</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>