force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Einstein_Score__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Score__c</fullName>
    <label>Einstein_Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Einstein_Score</labelOverride>
        <masterLabel>Einstein_Score</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>