force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Email_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Email_Clicks__c</fullName>
    <label>Email_Clicks</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email_Clicks</labelOverride>
        <masterLabel>Email_Clicks</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>