force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/KQ_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>KQ_Contact_ID__c</fullName>
    <label>Key Qualifier Contact_ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Contact_ID</labelOverride>
        <masterLabel>Key Qualifier Contact_ID</masterLabel>
        <refAttrDeveloperName>KQ_Contact_ID</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>