force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Orders_Placed__c.field-meta.xml
<CustomField>
    <fullName>Orders_Placed__c</fullName>
    <label>Orders_Placed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Orders_Placed</labelOverride>
        <masterLabel>Orders_Placed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>