force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Products_Explored__c.field-meta.xml
<CustomField>
    <fullName>Products_Explored__c</fullName>
    <label>Products_Explored</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Products_Explored</labelOverride>
        <masterLabel>Products_Explored</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>