force-app/main/default/objects/Mosaic_Digital_Champions_Mock__dlm/fields/Segment_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_Entry_Date__c</fullName>
    <label>Segment_Entry_Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Segment_Entry_Date</labelOverride>
        <masterLabel>Segment_Entry_Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>